--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -1,4 +1,5 @@
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/styles/main.css" />
 <title>Setter | {{ page.title }}</title>
 <meta content="{{ site.description }}" name="description">
